# papertext_auth

./: .editorconfig  .gitignore  .gitlab-ci.yml  .python-version  LICENSE  README.md  mypy.ini  pyproject.toml  start_db.py
.gitlab/: renovate.json5
src/papertext_auth/: __init__.py  __main__.py  auth.py  crypto.py
tests/: test_papertext_auth.py
