[tool.poetry]
name = "papertext_auth"
version = "0.1.0"
description = ""
authors = ["Danil Kireev <kireev@isa.ru>"]

[tool.poetry.scripts]
lint = "papertext_auth.__main__:lint"
fix = "papertext_auth.__main__:fix"

[tool.poetry.plugins."paperback.modules"]
auth = "papertext_auth:AuthImplemented"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.13"
psycopg2-binary = "^2.8.4"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7"
flakehell = "^0.3.2"
flake8-fixme = "^1.1"
flake8-mypy = "^17.8"
pep8-naming = "^0.9.1"
black = "19.10b0"
isort = "^4.3"
mypy = "^0.761"
rope = "^0.16.0"

[tool.flakehell]
exclude = ["__pycahce__"]
format = "grouped"
show_source = true
max_line_length = 79

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
"pep8-naming" = ["+*"]
"mccabe" = ["+*"]
"pycodestyle" = ["+*"]
"pyflakes" = ["+*"]
"pylint" = ["+*"]

[tool.black]
target-version = ['py38']
line_length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
balanced_wrapping = true
length_sort = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
