[tool.poetry]
name = "papertext_auth"
version = "0.1.0"
description = ""
authors = ["Danil Kireev <kireev@isa.ru>"]
license = "MIT"
readme="README.md"

[tool.poetry.scripts]
lint = "papertext_auth.__main__:Scripts.lint"
fix = "papertext_auth.__main__:Scripts.fix"

[tool.poetry.plugins."paperback.modules"]
auth = "papertext_auth:AuthImplemented"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.13"
passlib = "^1.7.2"
databases = {version = "^0.4.0", extras = ["postgresql"]}
argon2-cffi = {version="^20.1.0", optional=true}
ecdsa = "^0.15"
gmpy2 = {version="^2.0.8", optional=true}
authlib = "^0.14.3"
ua-parser = "^0.10.0"
user-agents = "^2.1"
pyyaml = "^5.3.1"
ipstack = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.7"
flakehell = "^0.7.0"
flake8-fixme = "^1.1"
pep8-naming = "^0.11.1"
black = "19.10b0"
isort = "^5.3"
mypy = "^0.782"
rope = "^0.18.0"
sqlalchemy-stubs = "^0.3"

[tool.poetry.extras]
argon2 = ["argon2-cffi"]
fast_ecdsa = ["gmpy2"]

[tool.flakehell]
exclude = ["__pycahce__"]
format = "grouped"
show_source = true
max_line_length = 79

[tool.flakehell.plugins]
"flake8-fixme" = ["+*"]
"pep8-naming" = ["+*"]
"mccabe" = ["+*"]
"pycodestyle" = ["+*"]
"pyflakes" = ["+*"]
"pylint" = ["+*"]

[tool.black]
target-version = ['py38']
line_length = 79

[tool.isort]
profile="black"
force_alphabetical_sort_within_sections=true
skip_gitignore=true
color_output=true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
